# pratice_test

./: .env.example  main.py  pyproject.toml
src/: main.py  python_interview.py
