[project]
name = "pratice-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "greenlet>=3.2.4",
    "langchain-openai>=0.3.32",
    "langchain-postgres>=0.0.15",
    "psycopg>=3.2.10",
    "psycopg-binary>=3.2.10",
    "psycopg2-binary>=2.9.10",
]
